# oifits-sim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README  README.md  commands
cmake_find/: README
common/: Array.cpp  Array.h  AtmosphereLayer.cpp  AtmosphereLayer.h  Baseline.cpp  Baseline.h  Beam.cpp  Bispectrum.h  Combiner.cpp  DelayLine.cpp  DelayLine.h  Detector.cpp  Detector.h  FTPedretti.cpp  Fiber.h  Makefile  Matrix.cpp  Matrix.h  Modulator.cpp  Modulator.h  Obs_HA.cpp  Obs_HA.h  Obs_OIFITS.cpp  Obs_OIFITS.h  Observation.cpp  Observation.h  PowerSpectrum.h  Simulator.cpp  Simulator.h  Source.cpp  Source.h  SpatialFilter.cpp  SpatialFilter.h  SpectralMode.cpp  SpectralMode.h  Station.cpp  Station.h  Triplet.cpp  Triplet.h  UVPoint.cpp  (+1 more)
doc/html/: Array_8cpp.html  Array_8cpp_source.html  Array_8h.html  Array_8h_source.html  AtmosphereLayer_8cpp.html  AtmosphereLayer_8cpp_source.html  AtmosphereLayer_8h.html  AtmosphereLayer_8h_source.html  Baseline_8cpp.html  Baseline_8cpp_source.html  Baseline_8h.html  Baseline_8h_source.html  Beam_8cpp.html  Beam_8cpp_source.html  Beam_8h.html  Beam_8h_source.html  Bispectrum_8h.html  Bispectrum_8h_source.html  Combiner_8cpp.html  Combiner_8cpp_source.html  Combiner_8h.html  Combiner_8h_source.html  DelayLine_8cpp.html  DelayLine_8cpp_source.html  DelayLine_8h.html  DelayLine_8h_source.html  Detector_8cpp.html  Detector_8cpp_source.html  Detector_8h.html  Detector_8h_source.html  FTBasden_8cpp.html  FTBasden_8cpp_source.html  FTBasden_8h.html  FTBasden_8h_source.html  FTPedretti_8cpp.html  FTPedretti_8cpp_source.html  FTPedretti_8h.html  FTPedretti_8h_source.html  FTPhaseABCD1_8cpp.html  FTPhaseABCD1_8cpp_source.html  (+324 more)
etc/: ARRAY.txt  CHARA.txt  CLIMB.txt  CLIMB_BrGamma.txt  CLIMB_H.txt  CLIMB_J.txt  CLIMB_KCont.txt  CLIMB_KPrime.txt  COMBINER.txt  COMBINER_SPECMODE.txt  MIRC.txt  MIRC_LowH.txt  PAVOC.txt  PAVOC_MAIN.txt  PAVOS.txt  PAVOS_MAIN.txt  README
ft_sim/: Beam.cpp  Beam.h  Combiner.h  Detector.cpp  FTBasden.cpp  FTBasden.h  FTPedretti.h  FTPhaseABCD1.cpp  FTPhaseABCD1.h  FTPhaseABCD2.cpp  FTPhaseABCD2.h  INSTALL  Makefile  PinholeCombiner.h  ZernikeLib.cpp  ZernikeLib.h  simulator  simulator.cpp
lib/: CMakeLists.txt
lib/oifitslib/: CMakeLists.txt  Makefile  exchange.h  free_fits.c  oifile.c  oifile.h  read_fits.c  write_fits.c
sample_data/: CHARA.txt  EpsAur_plain.fits  EpsAur_spot.fits  MIRC.txt  MIRC_LowH.txt  obs_epsAur.txt  sim_epsAur.txt  target_epsAur.txt
samples/: 2010-10-eps_Aur-all-avg5.oifits  2010-10.fits  EXAMPLE.TXT  EXAMPLES.TXT  OBSERVATION.txt  OBSERVATION_DESC.txt  OBSERVATION_HA.txt  TARGET.txt  epsAur  obs_desc_example.txt  obs_ha_example.txt  target_epsAur.txt
src/: #Baseline.cpp#  Array.cpp  Array.h  Baseline.cpp  Baseline.h  CMakeLists.txt  Combiner.cpp  Combiner.h  Common.cpp  Common.h  Matrix.cpp  Matrix.h  NoiseModel.cpp  NoiseModel.h  NoiseModel_Tatulli2006.cpp  NoiseModel_Tatulli2006.h  Obs_HA.cpp  Obs_HA.h  Obs_OIFITS.cpp  Obs_OIFITS.h  Observation.cpp  Observation.h  Quadruplet.cpp  Quadruplet.cpp~  Quadruplet.h  Quadruplet.h~  SpectralMode.cpp  SpectralMode.h  Station.cpp  Station.h  Target.cpp  Target.h  Triplet.cpp  Triplet.h  UVPoint.cpp  UVPoint.h  config.txt  oifits-sim.cpp  oifits-sim.h  random.c  (+1 more)
vis_sim/: Array2.txt  Array3.txt  GUI.glade  HourAngle.cpp  HourAngle.h  HourAngles_set1.txt  INSTALL  Instrument.cpp  Instrument.h  Instrument2.txt  Instrument3.txt  Makefile  NoiseModel.cpp  NoiseModel.h  README  SpectralMode1.txt  Target1.txt  VisSimParams.cpp  VisSimParams.h  main.cpp  noise.aux  noise.tex  oifits-sim  oifits_sim.cpp  oifits_sim.h  output.bispectrum  star_plus_shell.fits  userinterface.cpp  userinterface.h
(+259 files in other folders)
